<resources>
    <string name="app_name">demo</string>
    <string name="activity_test">Activity测试</string>
    <string name="broadcast_test">广播测试</string>
    <string name="fragment_test">fragment测试</string>
    <string name="dialog_test">dialog测试</string>
    <string name="service_test">service测试</string>
    <string name="context_test">context测试</string>
    <string name="contentProvider_test">contentProvider测试</string>
    <string name="packagemanger_test">PackageManager测试</string>

    <!--test activity-->
    <string name="test_oncreate">生命周期测试</string>
    <string name="test_activity_menu">Activity Menu测试</string>
    <string name="test_orientation">横竖屏切换测试</string>
    <string name="test_recreate">Activity ReCreate测试</string>
    <string name="test_recreatebysystem">ReCreateBySystem测试</string>
    <string name="test_activity_theme">Activity 主题测试</string>
    <string name="test_windowSoftInputMode">windowSoftInputMode测试</string>
    <string name="test_appcompatactivity">AppCompatActivity 测试</string>
    <string name="test_view">自定义控件 测试</string>

    <string name="add_fragment">动态添加fragment</string>
    <string name="xml_fragment">xml添加fragment</string>
    <string name="dialog_fragment">dialogfragment</string>

    <string name="my_button_desc">插件自定义控件button</string>
    <string name="my_button">自定义控件button</string>

    <string name="test_static_receiver">静态广播测试</string>
    <string name="test_dynamic_receiver">动态广播测试</string>

    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="bind_service">bind service</string>
    <string name="unbind_service">unbind service</string>

    <string name="get_applicationinfo">获取applicationinfo</string>
    <string name="get_activityinfo">获取activityinfo</string>
    <string name="get_packageinfo">获取packageinfo</string>

</resources>
