<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PluginDemoActivity">

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/test_add_fragment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/add_fragment" />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/test_add_fragment"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/test_xml_fragment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/xml_fragment" />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/test_xml_fragment"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/dialog_fragment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/dialog_fragment" />


</androidx.constraintlayout.widget.ConstraintLayout>