<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PluginDemoActivity">

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/get_activityinfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/get_activityinfo" />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/get_activityinfo"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/get_applicationinfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/get_applicationinfo" />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/get_applicationinfo"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/get_packageinfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/get_packageinfo" />


    <TextView
        android:id="@+id/content"
        app:layout_constraintTop_toBottomOf="@+id/get_packageinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>